--- a/web/test.html
+++ b/web/test.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <h1 class="try">Já jsem nadpis první úrovně</h1>
+   <header>
+    <p>tady mam neco v header</p>
+   </header>
+   <main>
+    <p>tady mam neco v mainu</p>
+   </main>
+   <aside>
+    <p>tohle je aside</p>
+   </aside>
+   <footer>
+    <p>tohle je footer</p>
+   </footer>
 </body>
 </html>
